add scheduleAppointmentById