@@ -1,7 +1,5 @@
 package org.hms.medica.patient.service;
 
-
-
 import com.querydsl.core.types.Predicate;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -28,64 +26,64 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class PatientService {
-    private final UserAppointmentService userAppointmentService;
-    private final UserService userService;
-    private final PatientAppointmentMapper patientAppointmentMapper;
-    private final PatientRepository patientRepository;
-    private final PatientMapper patientMapper;
+  private final UserAppointmentService userAppointmentService;
+  private final UserService userService;
+  private final PatientAppointmentMapper patientAppointmentMapper;
+  private final PatientRepository patientRepository;
+  private final PatientMapper patientMapper;
 
+  public List<PatientAppointmentDto> getAppointments() {
+    User user = userService.getCurrentUser();
+    log.info(String.valueOf(user.getId()));
+    return userAppointmentService.findUserAppointments(user).stream()
+        .map(
+            (appointment) -> {
+              PatientAppointmentDto patientAppointmentDto =
+                  patientAppointmentMapper.toDto(appointment);
+              patientAppointmentDto.setDoctorId(appointment.getDoctor().getId());
+              return patientAppointmentDto;
+            })
+        .collect(Collectors.toList());
+  }
 
-    public List<PatientAppointmentDto> getAppointments() {
-        User user = userService.getCurrentUser();
-        log.info(String.valueOf(user.getId()));
-        return userAppointmentService.findUserAppointments(user).stream()
-                .map(
-                        (appointment) -> {
-                            PatientAppointmentDto patientAppointmentDto =
-                                    patientAppointmentMapper.toDto(appointment);
-                            patientAppointmentDto.setDoctorId(appointment.getDoctor().getId());
-                            return patientAppointmentDto;
-                        })
-                .collect(Collectors.toList());
-    }
+  public List<PatientResponseDto> getAllPatients(Predicate predicate, Pageable pageable) {
+    return patientRepository.findAll(predicate, pageable).stream()
+        .map(patientMapper::mapPatientToPatientResponseDto)
+        .toList();
+  }
 
-    public List<PatientResponseDto> getAllPatients(
-            Predicate predicate, Pageable pageable
-    ) {
-        return patientRepository.findAll(predicate, pageable)
-                .stream()
-                .map(patientMapper::mapPatientToPatientResponseDto)
-                .toList();
-    }
+  public Patient getPatientById(Long patientId) {
+    return patientRepository
+        .findById(patientId)
+        .orElseThrow(
+            () -> new UsernameNotFoundException("Patient not found with id: " + patientId));
+  }
 
-    public PatientResponseDto getPatientById(Long patientId) {
-        var patient =  patientRepository.findById(patientId)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("Patient not found with id: " + patientId));
-        return patientMapper.mapPatientToPatientResponseDto(patient);
-    }
+  public PatientResponseDto getPatientDtoById(Long patientId) {
+    Patient patient = getPatientById(patientId);
+    return patientMapper.mapPatientToPatientResponseDto(patient);
+  }
 
-    @Transactional
-    public void registerPatient(PatientDto patientDto) {
-        var patient = new Patient();
-        patient = patientMapper.mapPatientDtoToPatient(patientDto);
-        patientRepository.save(patient);
-    }
+  @Transactional
+  public void registerPatient(PatientDto patientDto) {
+    var patient = new Patient();
+    patient = patientMapper.mapPatientDtoToPatient(patientDto);
+    patientRepository.save(patient);
+  }
 
-    @Transactional
-    public void updatePatient(Long patientId, PatientDto patientDto) {
-        var patient =  patientRepository.findById(patientId)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("Patient not found with id: " + patientId));
-        patientMapper.updatePatientFromDto(patientDto, patient);
-    }
+  @Transactional
+  public void updatePatient(Long patientId, PatientDto patientDto) {
+    var patient =
+        patientRepository
+            .findById(patientId)
+            .orElseThrow(
+                () -> new UsernameNotFoundException("Patient not found with id: " + patientId));
+    patientMapper.updatePatientFromDto(patientDto, patient);
+  }
 
-
-
-    public Patient findById(Long patientId) {
-        return patientRepository.findById(patientId)
-                .orElseThrow(() -> new UserNotFoundException("Patient Not found with id: "
-                        + patientId));
-    }
-
+  public Patient findById(Long patientId) {
+    return patientRepository
+        .findById(patientId)
+        .orElseThrow(() -> new UserNotFoundException("Patient Not found with id: " + patientId));
+  }
 }
